--- a/.github/workflows/ci-dev-build.yml
+++ b/.github/workflows/ci-dev-build.yml
@@ -45,7 +45,7 @@ jobs:
     # Check the package
     - name: Check the PyPI test package
       run: |
-        y | pip uninstall -r requirements.txt
+        pip uninstall -y -r requirements.txt
         package_version="$(grep -oP "VERSION = \"\K\d\.\d[.ba\d]+\.dev\d{10}" setup.py)"
         rm -R sentileak
         pip install --extra-index-url https://test.pypi.org/simple/ SentiLeak==$package_version
