--- a/.github/workflows/ci-dev-build.yml
+++ b/.github/workflows/ci-dev-build.yml
@@ -50,11 +50,11 @@ jobs:
         twine upload --repository-url https://test.pypi.org/legacy/ dist/*
 
     # Push wheel as an artifact
-    - name: Archive production artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: dist
-          path: dist
+    - name: Archive wheel
+      uses: actions/upload-artifact@v1
+      with:
+        name: dist
+        path: dist
 
     # Check the package
     - name: Check the PyPI test package
