--- a/.github/workflows/ci-dev-build.yml
+++ b/.github/workflows/ci-dev-build.yml
@@ -58,18 +58,26 @@ jobs:
         name: dist
         path: dist
 
-    # Wait for the package to be ready
-    - uses: nev7n/wait_for_response@v1
-      with:
-        url: 'https://test.pypi.org/SentiLeak/'$PACKAGE_VERSION
-        responseCode: 200
-        timeout: 2000
-        interval: 500
-
     # Check the package
     - name: Check the PyPI test package
       run: |
         pip uninstall -y -r requirements.txt
         rm -R sentileak
+
+        set -eux
+
+        declare -r HOST="https://test.pypi.org/project/SentiLeak/$PACKAGE_VERSION/"
+
+        wait-for-url() {
+            echo "Testing $1"
+            timeout -s TERM 45 bash -c \
+            'while [[ "$(curl -s -o /dev/null -L -w ''%{http_code}'' ${0})" != "200" ]];\
+            do echo "Waiting for ${0}" && sleep 2;\
+            done' ${1}
+            echo "OK!"
+            curl -I $1
+        }
+        wait-for-url http://${HOST}
+
         pip install --extra-index-url https://test.pypi.org/simple/ SentiLeak==$PACKAGE_VERSION
         python -m pytest test/
