--- a/.github/workflows/cd-pr-release.yml
+++ b/.github/workflows/cd-pr-release.yml
@@ -34,6 +34,7 @@ jobs:
 
     # Get version number
     - name: Get version number
+      id: get_version_number
       run: echo "::set-env name=PACKAGE_VERSION::$(grep -oP "VERSION = \"\K\d\.\d[.ba\d]+" setup.py)"
 
     # Build wheel and publish it
@@ -78,8 +79,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ PACKAGE_VERSION }}
-        release_name: SentiLeak - v${{ PACKAGE_VERSION }}
+        tag_name: ${{ steps.get_version_number.envs.PACKAGE_VERSION }}
+        release_name: SentiLeak - v${{ steps.get_version_number.envs.PACKAGE_VERSION }}
         body: |
           TODO
         draft: true
@@ -91,6 +92,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/SentiLeak-${{ PACKAGE_VERSION }}-py3-none-any.whl
-        asset_name: SentiLeak-${{ PACKAGE_VERSION }}-py3-none-any.whl
+        asset_path: ./dist/SentiLeak-${{ steps.get_version_number.envs.PACKAGE_VERSION }}-py3-none-any.whl
+        asset_name: SentiLeak-${{ steps.get_version_number.envs.PACKAGE_VERSION }}-py3-none-any.whl
         asset_content_type: application/zip
