--- a/.github/workflows/ci-dev-build.yml
+++ b/.github/workflows/ci-dev-build.yml
@@ -77,6 +77,7 @@ jobs:
             do echo "Waiting for ${0}" && sleep 2;\
             done' ${1}
             echo "OK!"
+            sleep 5
             curl -I $1
         }
         wait-for-url ${HOST}
